Correctly align the text of the rankings

--- a/components/explore/tabs/areas-interest/ranking/style.scss
+++ b/components/explore/tabs/areas-interest/ranking/style.scss
@@ -52,6 +52,7 @@
         display: flex;
         justify-content: end;
         align-items: center;
+        text-align: right;
         font-family: $font-family-2;
         @include font-size($font-size-xxs);
       }
